# PLC19R_Dataset_IDS

./: README.md  client.py  pyproject.toml
csv/: .gitattributes  clientHandler.py  filtered_4000_points_good.csv
csv/usb/: RigolDS0latest0.csv  RigolDS0ultima0.csv  testserversh0.csv
csv/usb/test/: test1.csv  test2.csv  test3.csv
dataset-generation-scripts/: client.py  oscilloscope.py  server.py  setup.sh
model/: model.py  model_new.py
utils/: significant_lines_counter.py
